fix(permission): add docs, clean imports, validate parent status